# terraform-kube-prom-stack-dashboards

./: README.md  get_version.py  main.py  main.tf  pyproject.toml
.github/: dependabot.yml
.github/workflows/: generate.yml  tag.yml
dasbhoards/: alertmanager-overview.json  cluster-total.json  controller-manager.json  k8s-resources-namespace.json  kubelet.json  namespace-by-pod.json  node-cluster-rsrc-use.json  nodes.json  pod-total.json  prometheus-remote-write.json  prometheus.json  workload-total.json
dashboards/: alertmanager-overview.json  apiserver.json  cluster-total.json  controller-manager.json  grafana-overview.json  k8s-resources-cluster.json  k8s-resources-multicluster.json  k8s-resources-namespace.json  k8s-resources-node.json  k8s-resources-nodes-overview.json  k8s-resources-pod.json  k8s-resources-windows-cluster.json  k8s-resources-windows-namespace.json  k8s-resources-windows-pod.json  k8s-resources-workload.json  k8s-resources-workloads-namespace.json  k8s-windows-cluster-rsrc-use.json  k8s-windows-node-rsrc-use.json  kubelet.json  namespace-by-pod.json  namespace-by-workload.json  node-cluster-rsrc-use.json  node-rsrc-use.json  nodes-aix.json  nodes-darwin.json  nodes.json  persistentvolumesusage.json  pod-total.json  prometheus-remote-write.json  prometheus.json  proxy.json  scheduler.json  statefulset.json  workload-total.json
output/: k8s-resources-cluster.json  k8s-resources-pod.json  k8s-resources-workloads-namespace.json  persistentvolumesusage.json  scheduler.json
