[tool.poetry]
name = "kube-prom-stack-dashboards"
version = "0.1.0"
description = ""
authors = ["Jens Langhammer <jens.langhammer@beryju.org>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
