[tool.poetry]
name = "kube-prom-stack-dashboards"
version = "0.1.0"
description = ""
authors = ["Jens Langhammer <jens.langhammer@beryju.org>"]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.2"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
